--- a/6-week-report/input/acknowledgement.tex
+++ b/6-week-report/input/acknowledgement.tex
@@ -7,7 +7,7 @@ I, student of Guru Nanak Dev Engineering College, Ludhiana, have taken efforts i
 However, it would not have been possible without the kind support and help of many individuals
 and organizations. I would like to extend my sincere thanks to all of them.\\
 
-The author is highly grateful to Dr. M.S. Saini Director, Guru Nanak Dev Engineering College, Ludhiana for providing her with the opportunity to carry out his Six month Training at
+The author is highly grateful to Dr. M.S. Saini Director, Guru Nanak Dev Engineering College, Ludhiana for providing her with the opportunity to carry out her Six weeks Training at
 Testing and Consultancy Cell, Guru Nanak Dev Engineering College, Ludhiana.\\
 
 The author would like to whole heartedly thank Dr. H.S. Rai Dean, Testing and Consultancy
